
    <resources>
        <string name="app_name">Domowy budżet</string>
        <string name="action_settings">Settings</string>

    <string name="title_activity_dodaj_wydatek">DodajWydatek</string>
    <string name="title_activity_usun_wydatek">UsunWydatek</string>
    <string name="title_activity_edytuj_wydatek">EdytujWydatek</string>
    <string name="title_activity_historia_wydatkow">HistoriaWydatkow</string>
    <string name="title_activity_statystyki">Statystyki</string>
    <string name="title_activity_kopia">Kopia</string>
    <string name="title_activity_ustawienia">Ustawienia</string>
    <string name="title_activity_autorzy">Autorzy</string>

</resources>
